// Vitest Snapshot v1

exports[`buildGraph > alias nodes empty cases shoud not fail 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [
          "TEST",
        ],
        "label": "B",
        "rawAliases": [
          "test",
        ],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "C",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > creates a graph with edges 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "2",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > does not shows journal pages when not requested 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > handles block references 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "2",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > increases the weight for multiple edges 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 2,
      },
      "source": "1",
      "target": "2",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > links graphs to nested parents 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "2",
    },
    {
      "attributes": {
        "weight": 1,
      },
      "source": "2",
      "target": "3",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "C",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > links shared references in a block 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "2",
    },
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "3",
    },
    {
      "attributes": {
        "weight": 1,
      },
      "source": "2",
      "target": "3",
    },
    {
      "attributes": {
        "weight": 1,
      },
      "source": "3",
      "target": "2",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "C",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > merges alias nodes 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "3",
      "target": "1",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [
          "B",
        ],
        "label": "A",
        "rawAliases": [
          "B",
        ],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "C",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > shows journal pages when requested 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "2",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "B",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > skips pages with graph-hide: true 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;

exports[`buildGraph > skips references to journal pages 1`] = `
{
  "attributes": {
    "isInited": true,
  },
  "edges": [
    {
      "attributes": {
        "weight": 1,
      },
      "source": "1",
      "target": "3",
    },
  ],
  "nodes": [
    {
      "attributes": {
        "aliases": [],
        "label": "A",
        "rawAliases": [],
        "type": "circle",
      },
    },
    {
      "attributes": {
        "aliases": [],
        "label": "C",
        "rawAliases": [],
        "type": "circle",
      },
    },
  ],
  "options": {
    "allowSelfLoops": true,
    "multi": false,
    "type": "mixed",
  },
}
`;
